added vendor page and components

--- a/src/app/ma-footer/ma-footer.component.html
+++ b/src/app/ma-footer/ma-footer.component.html
@@ -1,7 +1,7 @@
 <div class="ma-footer">
     <div class="footer-links">
         <div class="row">
-            <div class="col-md-3 ma-col-1">
+            <div class="col-6 col-md-3 ma-col-1">
                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Company</h3>
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
@@ -21,7 +21,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 ma-col-2">
+            <div class="col-6 col-md-3 ma-col-2">
                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Company</h3>
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
@@ -41,7 +41,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 ma-col-3">
+            <div class="col-6 col-md-3 ma-col-3">
                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Company</h3>
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
@@ -61,21 +61,21 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-3 ma-col-4">
+            <div class="col-6 col-md-3 ma-col-4">
                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Be Social With Us</h3>
                 <div class="ma_flex--container flex-column">
                     <div class="ma_flex__item--inherit">
-                        <div class="social-media-links">
-                            <div class="link-circle ma-mr-10">
+                        <div class="social-media-links flex-wrap">
+                            <div class="link-circle">
                                 <i class="ma-ico-facebook"></i>
                             </div>
-                            <div class="link-circle ma-mr-10">
+                            <div class="link-circle">
                                 <i class="ma-ico-instagram"></i>
                             </div>
-                            <div class="link-circle ma-mr-10">
+                            <div class="link-circle">
                                 <i class="ma-ico-twitter"></i>
                             </div>
-                            <div class="link-circle ma-mr-10">
+                            <div class="link-circle">
                                 <i class="ma-ico-youtube"></i>
                             </div>
                         </div> 
@@ -96,7 +96,7 @@
             </div>
             <div class="ma_flex__item ma_flex__item--vcenter">
                 <div class="ma_flex--container footer-quick-link-wrapper">
-                    <div class="ma_flex__item ma_flex__item--vcenter">
+                    <div class="ma_flex__item ma_flex__item--vcenter flex-wrap">
                         <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Online Shopping</span>
                         <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Promotions</span>
                         <span class="ma-txt__body2 ma-txt__secondary quick-link __link">Privacy Policy</span>
@@ -110,7 +110,7 @@
 </div>
 <div class="footer-copyright">
     <div class="ma_flex--container">
-        <div class="ma_flex__item ma_flex__item--vcenter">
+        <div class="ma_flex__item ma_flex__item--vcenter text-center">
             <div class="ma-txt__body2 ma-txt__white">MULTY APP © 2020. All Rights Reserved. Designed by Optimo</div>
         </div>
     </div>
