--- a/src/app/ma-landing-page/ma-landing-page.component.html
+++ b/src/app/ma-landing-page/ma-landing-page.component.html
@@ -118,7 +118,7 @@
                 <h3 class="ma__heading-3 ma-txt__secondary">Delivered with us</h3>
             </div>
         </div>
-        <div class="ma_flex--container">
+        <div class="ma_flex--container flex-wrap flex-md-nowrap">
             <div class="ma_flex__item ma-col-1">
                 <app-ma-image-card-secondary></app-ma-image-card-secondary>
             </div>
