--- a/src/app/ma-top-categories/ma-top-categories.component.html
+++ b/src/app/ma-top-categories/ma-top-categories.component.html
@@ -21,7 +21,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-sandwich"></i>
-                                            <span class="">Food</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Food</span>
                                         </div>
                                     </button>
                                 </div>
@@ -29,7 +29,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-dress"></i>
-                                            <span>Fashion</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Fashion</span>
                                         </div>
                                     </button>
                                 </div>
@@ -37,7 +37,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-signage"></i>
-                                            <span>Salon</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Salon</span>
                                         </div>
                                     </button>
                                 </div>
@@ -45,7 +45,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-signage"></i>
-                                            <span>Jewellery</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Jewellery</span>
                                         </div>
                                     </button>
                                 </div>
@@ -53,7 +53,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-brain"></i>
-                                            <span>Electronics</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Electronics</span>
                                         </div>
                                     </button>
                                 </div>
@@ -61,7 +61,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-signage"></i>
-                                            <span>Book Store</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Book Store</span>
                                         </div>
                                     </button>
                                 </div>
@@ -69,7 +69,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-signage"></i>
-                                            <span>Convenience Store</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Convenience Store</span>
                                         </div>
                                     </button>
                                 </div>
@@ -77,7 +77,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-florist"></i>
-                                            <span>Florist</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Florist</span>
                                         </div>
                                     </button>
                                 </div>
@@ -85,7 +85,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-optician"></i>
-                                            <span>Optician</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Optician</span>
                                         </div>
                                     </button>
                                 </div>
@@ -93,7 +93,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-gift"></i>
-                                            <span>Stationary & Gift shop</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Stationary & Gift shop</span>
                                         </div>
                                     </button>
                                 </div>
@@ -101,7 +101,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-heart"></i>
-                                            <span>Charity</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Charity</span>
                                         </div>
                                     </button>
                                 </div>
@@ -109,7 +109,7 @@
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
                                             <i class="ma-ico-plan"></i>
-                                            <span>Hobbies & Gaming</span>
+                                            <span class="ma-txt__body2 ma-txt__secondary">Hobbies & Gaming</span>
                                         </div>
                                     </button>
                                 </div>
