--- a/src/styles/components/_top-header.scss
+++ b/src/styles/components/_top-header.scss
@@ -1,6 +1,7 @@
 .ma-top-header{
     background-color: #F8F8F8;
     padding: 10px 25px;
+    width: 100%;
     .top-header-label{
         padding-right: 20px;
         border-right: 1px dotted #000;
