--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,5 +21,9 @@
 @import "components/app-download";
 @import "components/footer";
 @import "components/carousel";
+@import "components/vendor-services";
+@import "components/floating-container";
+@import "components/.section-tabs";
 
 @import "pages/landing-page";
+@import "pages/vendor-page";
