--- a/src/app/ma-carousel/ma-carousel.component.html
+++ b/src/app/ma-carousel/ma-carousel.component.html
@@ -4,9 +4,9 @@
             All Categories
             <ul class="item-body">
                 <div class="row">
-                    <div class="col-md-9 d-flex flex-column align-items-center justify-content-center">
+                    <div class="col-12 col-md-9 d-flex flex-column align-items-center justify-content-center">
                         <div class="row">
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item--inherit">
@@ -32,7 +32,7 @@
                                 </div>
                             </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 -md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item--inherit">
@@ -58,7 +58,7 @@
                                 </div>
                             </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item--inherit">
@@ -84,7 +84,7 @@
                                 </div>
                             </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item--inherit">
@@ -112,7 +112,7 @@
                             </div>
                         </div>
                         <div class="row  bottom-row">
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                                 <div class="ma_flex--container flex-column">
                                     <div class="ma_flex__item--inherit">
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                                 <div class="ma_flex--container flex-column">
                                     <div class="ma_flex__item--inherit">
@@ -134,7 +134,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                                 <div class="ma_flex--container flex-column">
                                     <div class="ma_flex__item--inherit">
@@ -145,7 +145,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                                 <div class="ma_flex--container flex-column">
                                     <div class="ma_flex__item--inherit">
@@ -158,7 +158,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col- 12 col-md-3">
                         <img class="" src="../../assets/images/menu-image.jpg">
                     </div>
                 </div>
@@ -168,9 +168,9 @@
             Shops
             <ul class="item-body">
                 <div class="row">
-                    <div class="col-md-9 d-flex flex-column align-items-center justify-content-center">
+                    <div class="col-12 col-md-9 d-flex flex-column align-items-center justify-content-center">
                         <div class="row">
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item--inherit">
@@ -196,7 +196,7 @@
                                 </div>
                             </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 -md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item--inherit">
@@ -222,7 +222,7 @@
                                 </div>
                             </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item--inherit">
@@ -248,7 +248,7 @@
                                 </div>
                             </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                             <div class="ma_flex--container flex-column">
                                 <div class="ma_flex__item--inherit">
@@ -276,7 +276,7 @@
                             </div>
                         </div>
                         <div class="row  bottom-row">
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                                 <div class="ma_flex--container flex-column">
                                     <div class="ma_flex__item--inherit">
@@ -287,7 +287,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                                 <div class="ma_flex--container flex-column">
                                     <div class="ma_flex__item--inherit">
@@ -298,7 +298,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                                 <div class="ma_flex--container flex-column">
                                     <div class="ma_flex__item--inherit">
@@ -309,7 +309,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-6 col-md-3">
                                 <h3 class="ma__heading-3 ma-txt__white ma-fontweight__bold section-title">Convenience Store</h3>
                                 <div class="ma_flex--container flex-column">
                                     <div class="ma_flex__item--inherit">
@@ -322,7 +322,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col- 12 col-md-3">
                         <img class="" src="../../assets/images/menu-image.jpg">
                     </div>
                 </div>
@@ -335,7 +335,7 @@
             Collection
         </li>
         <div class="ma_flex--container right-col">
-            <div class="ma_flex__item ma_flex__item--vcenter justify-content-end right-col">
+            <div class="ma_flex__item ma_flex__item--vcenter justify-content-md-end right-col">
                 <i class="material-icons ma-pr-10">phone</i>
                 <span class="ma-txt__body2">Hotline (+123)4 567 890</span>
             </div>
@@ -349,6 +349,53 @@
             </div>
             <div class="ma_flex__item ma-txt__center">
                 <button mat-button class="btn-carousel">Shop Now</button>
+            </div>
+        </div>
+    </div>
+    <div class="carousel-description--vendor">
+        <div class="ma_flex--container flex-wrap">
+            <div class="ma_flex__item">
+                <div class="ma_flex--container flex-column">
+                    <div class="ma_flex__item ma_flex__item--vcenter">
+                        <h1 class="ma__heading-1 ma-txt__white">Rose Marry Stores</h1>
+                    </div>
+                    <div class="ma_flex__item ma_flex__item--vcenter ratings">
+                        <i class="material-icons ma-pr-10">star</i>
+                        <i class="material-icons ma-pr-10">star</i>
+                        <i class="material-icons ma-pr-10">star</i>
+                        <i class="material-icons ma-pr-10">star</i>
+                        <i class="material-icons ma-pr-10">star</i>
+                        <span class="ma-txt__body2 ma-txt__white ma-pr-10">4.0</span>
+                        <span class="ma-txt__body2 ma-txt__white ma-pr-10">[250+]</span>
+                    </div>
+                    <div class="ma_flex__item ma_flex__item--vcenter">
+                        <i class="material-icons ma-pr-10">star</i>
+                        <span class="ma-txt__body2 ma-txt__white ma-pr-10">61 Bridge Street, Kington. Herefordshire HR5 3DJ</span>
+                    </div>
+                </div>
+            </div>
+            <div class="ma_flex__item">
+                <div class="ma_flex--container flex-column align-items-end">
+                    <div class="ma_flex__item ma_flex__item--vcenter">
+                        <h2 class="ma__heading-2 ma-txt__tertiary">Open</h2>
+                    </div>
+                    <div class="ma_flex__item ma_flex__item--vcenter">
+                        <span class="ma-txt__body2 ma-txt__white">Closes at 8:00 PM</span>
+                    </div>
+                    <div class="ma_flex__item ma_flex__item--vcenters">
+                        <button mat-button class="btn-select">
+                            <div class="ma_flex--container">
+                                <div class="ma_flex__item--inherit ma_flex__item--vcenter">
+                                    <i class="material-icons ma-pr-10">star</i>
+                                </div>
+                                <div class="ma_flex__item ma_flex__item--vcenter">
+                                    <span class="ma-txt__body2 ma-txt__white ma-pr-10">Select date and time 
+                                        for your reservation</span>
+                                </div>
+                            </div>
+                        </button>
+                    </div>
+                </div>        
             </div>
         </div>
     </div>
