--- a/src/app/ma-routing-project/ma-routing-project.component.html
+++ b/src/app/ma-routing-project/ma-routing-project.component.html
@@ -12,10 +12,16 @@
             <mat-list-item role="listitem"><a routerLink="/top-categories" mat-button color="primary">Top Categories</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/image-card-primary" mat-button color="primary">Image Card Primary</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/image-card-secondary" mat-button color="primary">Image Card Secondary</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/image-card-detailed" mat-button color="primary">Image Card Detailed</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/image-card-described" mat-button color="primary">Image Card Described</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/download-component" mat-button color="primary">App Download</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/footer" mat-button color="primary">Footer</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/carousel" mat-button color="primary">Carousel</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/vendor-services" mat-button color="primary">Vendor Services</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/floating-container" mat-button color="primary">Floating Container</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/section-tabs" mat-button color="primary">Section Tabs</a></mat-list-item>
             <mat-list-item role="listitem"><a routerLink="/landing-page" mat-button color="primary">Landing Page</a></mat-list-item>
+            <mat-list-item role="listitem"><a routerLink="/vendor-page" mat-button color="primary">Vendor Page</a></mat-list-item>
         </mat-list>
     </mat-drawer>
     <div class="example-sidenav-content">
