--- a/src/styles/components/_image-card-full.scss
+++ b/src/styles/components/_image-card-full.scss
@@ -1,12 +1,26 @@
 .ma-image-card-full{
-    background: linear-gradient( rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25) ), url('https://jooinn.com/images/girl-using-mobile-2.png') no-repeat;
-    background-size: cover;
+    // background: linear-gradient( rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0.25) ), url('https://jooinn.com/images/girl-using-mobile-2.png') no-repeat;
+    // background-size: cover;
+    // padding: 30px 70px;
+    position: relative;
     min-height: 500px;
-    padding: 30px 70px;
+    .img-bg{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+    }
+    .img-landing-page, .img-vendor-page{
+        display: none;
+    }
+    .inner-wrapper{
+        min-height: 500px;
+        padding: 30px 70px;
+    }
     .card-title{
         font-size: 50px;
         font-weight: 600;
         margin: 30px 0px;
+        line-height: 50px;
     }
     .card-description{
         font-size: 30px;
