--- a/src/styles/components/_top-categories.scss
+++ b/src/styles/components/_top-categories.scss
@@ -3,6 +3,14 @@
     bottom: 160px;
     margin-right: 50px;
     margin-left: 50px;
+    @include respond-to("x-small") {
+        margin-right: 0px;
+        margin-left: 0px;
+    }
+    @include respond-to("medium") {
+        margin-right: 50px;
+        margin-left: 50px;
+    }
     .section-header--small{
         h1{
             margin-bottom: 10px;
@@ -42,6 +50,7 @@
         i{
             font-size: 32px;
             margin-bottom: 10px;
+            transition: .3s;
         }
         button{
             height: 100%;
@@ -49,7 +58,7 @@
             border-radius: 0px;
             &:hover{
                   i {
-                      
+                    color: #E91E63;  
                     &:after {
                     transition: all 0.8s ease-out;
                       right: 100%;
