--- a/src/styles/pages/_landing-page.scss
+++ b/src/styles/pages/_landing-page.scss
@@ -12,6 +12,18 @@
             max-height: 500px;
         }
     }
+    .carousel-description--vendor{
+        display: none;
+    }
+    .ma-image-card-full{
+        .img-landing-page{
+            display: block;
+            object-fit: cover;
+        }
+        .inner-wrapper--vendor{
+            display: none;
+        }
+    }
     .section-header{
         margin-bottom: 20px;
         h1{
@@ -63,6 +75,12 @@
             margin:5px;
             max-width: 262px;
             min-width: unset;
+            @include respond-to("x-small") {
+                max-width: unset;
+            }
+            @include respond-to("medium") {
+                max-width: 262px;
+            }
         }
     }
     .near-me-section{
