ivendor page icons updated

--- a/src/app/ma-carousel/ma-carousel.component.html
+++ b/src/app/ma-carousel/ma-carousel.component.html
@@ -369,7 +369,7 @@
                         <span class="ma-txt__body2 ma-txt__white ma-pr-10">[250+]</span>
                     </div>
                     <div class="ma_flex__item ma_flex__item--vcenter">
-                        <i class="material-icons ma-pr-10">star</i>
+                        <i class="ma-ico-address ma-pr-10"></i>
                         <span class="ma-txt__body2 ma-txt__white ma-pr-10">61 Bridge Street, Kington. Herefordshire HR5 3DJ</span>
                     </div>
                 </div>
@@ -386,7 +386,7 @@
                         <button mat-button class="btn-select">
                             <div class="ma_flex--container">
                                 <div class="ma_flex__item--inherit ma_flex__item--vcenter">
-                                    <i class="material-icons ma-pr-10">star</i>
+                                    <i class="ma-ico-calendar-3 ma-pr-10"></i>
                                 </div>
                                 <div class="ma_flex__item ma_flex__item--vcenter">
                                     <span class="ma-txt__body2 ma-txt__white ma-pr-10">Select date and time 
