--- a/src/app/ma-vendor-services/ma-vendor-services.component.html
+++ b/src/app/ma-vendor-services/ma-vendor-services.component.html
@@ -3,7 +3,7 @@
         <div class="ma_flex__item ma_flex__item--vcenter service-item">
             <div class="ma_flex--container">
                 <div class="ma_flex__item ma_flex__item--vcenter">
-                    <i class="ma-ico-order"></i>
+                    <i class="ma-ico-order-2"></i>
                 </div>
                 <div class="ma_flex__item  flex-column">
                     <h3 class="ma__heading-3">Free Delivery</h3>
@@ -14,7 +14,7 @@
         <div class="ma_flex__item ma_flex__item--vcenter service-item">
             <div class="ma_flex--container">
                 <div class="ma_flex__item ma_flex__item--vcenter">
-                    <i class="ma-ico-order"></i>
+                    <i class="ma-ico-money"></i>
                 </div>
                 <div class="ma_flex__item  flex-column">
                     <h3 class="ma__heading-3">Money Guarantee</h3>
@@ -25,7 +25,7 @@
         <div class="ma_flex__item ma_flex__item--vcenter service-item">
             <div class="ma_flex--container">
                 <div class="ma_flex__item ma_flex__item--vcenter">
-                    <i class="ma-ico-order"></i>
+                    <i class="ma-ico-pay"></i>
                 </div>
                 <div class="ma_flex__item  flex-column">
                     <h3 class="ma__heading-3">Payment Method</h3>
@@ -36,7 +36,7 @@
         <div class="ma_flex__item ma_flex__item--vcenter service-item">
             <div class="ma_flex--container">
                 <div class="ma_flex__item ma_flex__item--vcenter">
-                    <i class="ma-ico-order"></i>
+                    <i class="ma-ico-support"></i>
                 </div>
                 <div class="ma_flex__item  flex-column">
                     <h3 class="ma__heading-3">Support 24/7</h3>
