updated product and landing pages

--- a/src/app/ma-image-card-primary/ma-image-card-primary.component.html
+++ b/src/app/ma-image-card-primary/ma-image-card-primary.component.html
@@ -25,22 +25,22 @@
                     <div class="ma_flex__item">
                         <div class="ma_flex--container">
                             <div class="ma_flex__item ma_flex__item--vcenter">
-                                <i class="star-icon ma-pr-10 material-icons">star</i>
-                                <i class="star-icon ma-pr-10 material-icons">star</i>
-                                <i class="star-icon ma-pr-10 material-icons">star</i>
-                                <i class="star-icon ma-pr-10 material-icons">star</i>
-                                <i class="star-icon ma-pr-10 material-icons">star</i>
+                                <i class="star-icon material-icons">star</i>
+                                <i class="star-icon material-icons">star</i>
+                                <i class="star-icon material-icons">star</i>
+                                <i class="star-icon material-icons">star</i>
+                                <i class="star-icon material-icons">star</i>
                             </div>
                             <div class="ma_flex__item ma_flex__item--vcenter">
                                 <div class="ma-txt__body2-small"><span class="ma-pr-10">4.0</span>[250+]</div>
                             </div>
                         </div>
                     </div>
-                    <div class="ma_flex__item"><span class="ma-txt__body2-small ma-txt__primary">Appointment</span></div>
+                    <div class="ma_flex__item"><span class="ma-txt__body2 ma-txt__primary ma-fontweight__bolder">Appointment</span></div>
                 </div>
             </div>
-            <div class="ma_flex__item d-flex align-items-end">
-                <div class="ma_flex--container flex-column ma-pl-20">
+            <div class="ma_flex__item d-flex align-items-end justify-content-end">
+                <div class="ma_flex--container flex-column ma-pl-20 align-items-end">
                     <div class="ma_flex__item ma_flex__item--vcenter">
                         <i class="icon-star ma-pr-5 material-icons">place</i>
                         <span class="ma-txt__body2-small">[3.5km]</span>
