--- a/src/app/ma-landing-page/ma-landing-page.component.html
+++ b/src/app/ma-landing-page/ma-landing-page.component.html
@@ -42,8 +42,16 @@
             </div>
         </div>
     </div>
-    <app-ma-image-card-full></app-ma-image-card-full>
-    <app-ma-top-categories></app-ma-top-categories>
+    <div class="container-fluid top-cat-container">
+        <app-ma-image-card-full></app-ma-image-card-full>
+        <app-ma-top-categories></app-ma-top-categories>
+        <div class="ma_flex--container all-available">
+            <div class="ma_flex__item ma_flex__item--vcenter">
+                <span class="ma-txt__body2 ma-txt__primary">List all available categories </span>
+                <i class="material-icons ma-pl-10 ma-txt__primary">chevron_right</i>
+            </div>
+        </div>
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-md-6">
