--- a/src/app/ma-top-categories/ma-top-categories.component.html
+++ b/src/app/ma-top-categories/ma-top-categories.component.html
@@ -16,7 +16,7 @@
                     </div>
                     <div class="ma_flex__item">
                         <div class="top-cat-middle-col">
-                            <div class="ma_flex--container">
+                            <div class="ma_flex--container row-1">
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
@@ -65,6 +65,8 @@
                                         </div>
                                     </button>
                                 </div>
+                            </div>
+                            <div class="ma_flex--container row-2">
                                 <div class="ma_flex__item cat-item">
                                     <button mat-stroked-button>
                                         <div class="ma_flex--container flex-column">
