--- a/src/app/ma-vendor-page/ma-vendor-page.component.html
+++ b/src/app/ma-vendor-page/ma-vendor-page.component.html
@@ -9,7 +9,7 @@
         <app-ma-carousel></app-ma-carousel>
     </div>
     <div class="container">
-    i    <app-ma-vendor-services></app-ma-vendor-services>
+         <app-ma-vendor-services></app-ma-vendor-services>
     </div>
     <div class="container ad-card-section">
         <div class="ma_flex--container">
