--- a/src/styles/base/_utilities.scss
+++ b/src/styles/base/_utilities.scss
@@ -10,6 +10,12 @@
 .ma-mr-10{
     margin-right: 10px;
 }
+.ma-mb-10{
+    margin-bottom: 10px;
+}
+.ma-mt-15{
+    margin-top: 15px;
+}
 .ma-pl-20{
     padding-left: 20px;
 }
