--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,7 +23,9 @@
 @import "components/carousel";
 @import "components/vendor-services";
 @import "components/floating-container";
-@import "components/.section-tabs";
+@import "components/section-tabs";
+@import "components/product";
 
 @import "pages/landing-page";
 @import "pages/vendor-page";
+@import "pages/product-page";
