--- a/src/styles/components/_image-card.scss
+++ b/src/styles/components/_image-card.scss
@@ -24,7 +24,7 @@
         flex-direction: column;
         justify-content: space-between;
         //background-color: #b4b4b4;
-        padding: 15px;
+        padding: 10px;
         min-width: 300px;
         min-height: 200px;
         //background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.50) ), url('https://previews.123rf.com/images/stockbroker/stockbroker1411/stockbroker141100098/33469667-group-of-young-friends-shopping-outdoors-together.jpg');
@@ -105,6 +105,34 @@
             }
         }
     }
+    &--verticle{
+        min-height: 500px;
+        min-width: 100px;
+        padding:15px;
+        position: relative;
+        transition: all 1s ease-out;
+        .card-inner-wrapper{
+            padding: 15px;
+            border:1px dotted #fff;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            .card-title{
+                margin:30px 0px;
+            }
+            .card-sub-title{
+                text-align: center;
+                margin:20px 0px;
+            }
+        }
+        button{
+            border-radius: 18px;
+            color: #fff;
+            background-color: #4CAF50;
+            border-radius: 1px solid #707070;
+            padding: 0 30px;
+        }
+    }
 }
 .described-card-details{
     padding: 15px;
@@ -114,6 +142,7 @@
     }
     .star-icon{
         color:#E91E63;
+        padding-right: 2px;
     }
     .left-col{
         min-height: 80px;
@@ -124,4 +153,8 @@
 }
 .secondary-card-details{
     margin-top: 20px;
+}
+.verticle-card-wrapper{
+    display: flex;
+    height: 100%;
 }
